--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.ClockActivity" />
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.ChronometerActivity" />
     </application>
 
 </manifest>
