Alarms Module (WIP)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity
             android:name=".activities.MainActivity"
             android:windowSoftInputMode="adjustPan" />
+
+        <receiver android:name=".receivers.AlarmNotificationReceiver"/>
     </application>
 
 </manifest>
